# FireAndFlame

./: CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md
Saves/: save_1.json  save_2.json  save_3.json
assets/Dialogues/: Area_3Sign.json  Final_BossSign.json  Neutrale_Ebene_Level_12.json  Neutrale_Ebene_Statue.json  TutorialSign.json  dashUpgrade.json  dashUpgradeGamepad.json  doubleJump.json  doubleJumpGamepad.json  iceBossDialogue.json  minerBossDialogue.json  neutralAreaNPC1.json  neutralAreaNPC2.json  neutralAreaNPC3.json  neutralAreaNPC4.json  neutralAreaNPC5.json  testText.json  traitorBossDialogue1.json  traitorBossDialogue2.json  tutorialText1.json  tutorialText1Gamepad.json  tutorialText2.json  tutorialText3.json  tutorialText3Gamepad.json  tutorialText4.json  tutorialText5.json  tutorialText5Gamepad.json  wallJumpUpgrade.json  wallJumpUpgradeGamepad.json
assets/Tilemaps/: Area_One_Tilemap.json  Area_Three_Tilemap.json  Area_Two_Tilemap.json  Final_Boss_Tilemap.json  Ice_Boss_Tilemap.json  Miner_Boss_Tilemap.json  Neutral_Area_Tilemap.json  Tutorial_Tilemap.json  Verrater_Boss.json  Verrater_Boss_neu.json
assets/Tilemaps/Testmap/: Map_2.json  NEUTRAL_AREA.json  Tilemap_1.json  (+6 more)
cmake/: CMakeCache.txt  copy-assets.cmake
src/: CMakeLists.txt  Global.h  config.h.in  game.h  main.cpp  raygui.h
src/Core/: Actor.cpp  Actor.h  BackgroundManager.cpp  BackgroundManager.h  CMakeLists.txt  Coal.cpp  Coal.h  Component.cpp  Component.h  DialogueManager.cpp  DialogueManager.h  DialogueMananger.cpp  DialogueMananger.h  EState.cpp  EState.h  Enemy.cpp  Enemy.h  EnemyList.h  EnemyTypes.h  GameMode.cpp  GameMode.h  HUD.cpp  HUD.h  Interactable.cpp  Interactable.h  Object.cpp  Object.h  ObjectTypes.h  PlayerCharacter.cpp  PlayerCharacter.h  PlayerController.cpp  PlayerController.h  PlayerStates.cpp  PlayerStates.h  SaveGameState.cpp  SaveGameState.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  (+5 more)
src/Core/Observer/: CMakeLists.txt  Events.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
src/Data/: CMakeLists.txt  Coal.cpp  Coal.h  Deathzone.cpp  Deathzone.h  DialogObject.cpp  DialogObject.h  DialogueObject.cpp  DialogueObject.h  Door.cpp  Door.h  HUD.cpp  HUD.h  HeartObject.cpp  HeartObject.h  HitMarker.cpp  HitMarker.h  Miner.cpp  Miner.h  NPC.cpp  NPC.h  PlayerCharacter.h  PowerUp.cpp  PowerUp.h  SaveInteractable.cpp  SaveInteractable.h  SceneChangerObject.cpp  SceneChangerObject.h  Spawner.cpp  Spawner.h  Speechbubble.cpp  Speechbubble.h  TmpDialogueObject.cpp  TmpDialogueObject.h  ToastCat.cpp  ToastCat.h
src/Data/Enemies/: ApproachingState.cpp  ApproachingState.h  AttackingState.cpp  AttackingState.h  CMakeLists.txt  EnemyStateHandler.cpp  EnemyStateHandler.h  Fly.cpp  Fly.h  Foam.cpp  Foam.h  Howler.cpp  Howler.h  IdleState.cpp  IdleState.h  Miner.cpp  Miner.h  RoamingState.cpp  RoamingState.h  Saugi.cpp  Saugi.h  SpiderBot.cpp  SpiderBot.h  SpringHog.cpp  SpringHog.h  StunnedState.cpp  StunnedState.h  Toast.cpp  Toast.h  ToastCat.cpp  ToastCat.h
src/Data/FinalBoss/: BossEnergySwordAttack.cpp  BossEnergySwordAttack.h  BossRangedAttack.cpp  BossRangedAttack.h  BossSword.cpp  BossSword.h  ChasingBoss.cpp  ChasingBoss.h  EnergyAttack.cpp  EnergyAttack.h  FBBigSpearAtk.cpp  FBBigSpearAtk.h  FBBossDying.cpp  FBBossDying.h  FBChangeStates.cpp  FBChangeStates.h  FBDashAtk.cpp  FBDashAtk.h  FBEnergyAtk.cpp  FBEnergyAtk.h  FBFlyDown.cpp  FBFlyDown.h  FBIdleDown.cpp  FBIdleDown.h  FBIdleFly.cpp  FBIdleFly.h  FBRangedAtk.cpp  FBRangedAtk.h  FBSpawnE.cpp  FBSpawnE.h  FBSpawnEDown.cpp  FBSpawnEDown.h  FBSpearAtk.cpp  FBSpearAtk.h  FBSwordAtk.cpp  FBSwordAtk.h  FinalBossEnemy.cpp  FinalBossEnemy.h  SpearAttack.cpp  SpearAttack.h
src/Data/IceBoss/: CMakeLists.txt  FreezeVisual.cpp  FreezeVisual.h  IBBeforeFight.cpp  IBBeforeFight.h  IBMelee.cpp  IBMelee.h  IBMinions.cpp  IBMinions.h  IBRanged.cpp  IBRanged.h  IBSeek.cpp  IBSeek.h  IceBoss.cpp  IceBoss.h  IceZone.cpp  IceZone.h
src/Data/MinerBoss/: MBBeforeFight.cpp  MBBeforeFight.h  MBDecisionState.cpp  MBDecisionState.h  MBMeleeAttackState.cpp  MBMeleeAttackState.h  MBPhaseTransitionState.cpp  MBPhaseTransitionState.h  MBRangedState.cpp  MBRangedState.h  MBSummonState.cpp  MBSummonState.h  MinerBoss.cpp  MinerBoss.h
src/Data/Player/: ActionState.cpp  ActionState.h  CMakeLists.txt  FallingSubState.cpp  FallingSubState.h  Fireball.cpp  Fireball.h  IdleActionState.cpp  IdleActionState.h  IdleGroundedSubState.cpp  IdleGroundedSubState.h  IdleSubState.cpp  IdleSubState.h  JumpingSubState.cpp  JumpingSubState.h  MeleeActionState.cpp  MeleeActionState.h  MovementState.cpp  MovementState.h  MovingGroundedSubState.cpp  MovingGroundedSubState.h  MovingSubState.cpp  MovingSubState.h  PlayerCharacter.cpp  PlayerCharacter.h  PlayerObserver.cpp  PlayerObserver.h  RangedActionState.cpp  RangedActionState.h  WallJumpingSubState.cpp  WallJumpingSubState.h  WallSlideSubState.cpp  WallSlideSubState.h
src/Data/TraitorBoss/: CMakeLists.txt  TBAfterFightState.cpp  TBAfterFightState.h  TBApproachingState.cpp  TBApproachingState.h  TBBeforeFightState.cpp  TBBeforeFightState.h  TBDashState.cpp  TBDashState.h  TBIdleState.cpp  TBIdleState.h  TBJumpUpStage.cpp  TBJumpUpStage.h  TBMeleeState.cpp  TBMeleeState.h  TBRangedState.cpp  TBRangedState.h  TBSeekCoal.cpp  TBSeekCoal.h  TraitorBoss.cpp  TraitorBoss.h  TraitorStateHandler.cpp  TraitorStateHandler.h
src/Enemies/: Miner.cpp  Miner.h  ToastCat.cpp  ToastCat.h
src/GameData/: CMakeLists.txt  IgniteGameMode.cpp  IgniteGameMode.h  IgniteHUD.cpp  IgniteHUD.h  IgnitePlayerCharacter.cpp  IgnitePlayerCharacter.h  IgnitePlayerController.cpp  IgnitePlayerController.h
src/Scenes/: AreaOne.cpp  AreaOne.h  AreaThree.cpp  AreaThree.h  AreaTwo.cpp  AreaTwo.h  CMakeLists.txt  DeathScreen.cpp  DeathScreen.h  Endscreen.cpp  Endscreen.h  FinalBoss.cpp  FinalBoss.h  IceBossScene.cpp  IceBossScene.h  MainMenu.cpp  MainMenu.h  MinerBossScene.cpp  MinerBossScene.h  NeutralArea.cpp  NeutralArea.h  SceneEnums.h  TestScene.cpp  TestScene.h  TraitorBossScene.cpp  TraitorBossScene.h  Tutorial.cpp  Tutorial.h
